trying to workaround scalatest issue